[metadata]
name = easyparser
version = 0.1.0
url = https://github.com/mainmaster/easyparser
author = Andrey C, Nikita M
author_email = frill2one@gmail.com
description = data ejector
long_description = file: README.md
long_description_content_type = text/markdown
license = file: LICENSE
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >= 3.6
install_requires =
    lxml >= 4.2.5, < 5.0.0
    requests >= 2.0.0, < 3.0.0
